--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -2334,7 +2334,7 @@ can now be rewritten from its original source:
      | htmlDump }}{% endraw %}
 ```
 
-To use extension methods to dramatically improves its readability as it's execution flow is now able to read from left-to-right:
+to use extension methods which greatly improves its readability as its execution flow is now able to read from left-to-right:
 
 ```hbs
 {% raw %}{{ customers | map => { 
@@ -2352,7 +2352,31 @@ To use extension methods to dramatically improves its readability as it's execut
 ```
 
 Which we believe now makes it even more readable than the 
-[original C# LINQ Expression](https://sharpscript.net/linq/grouping-operators#linq43-groupby---nested).
+[original C# LINQ Expression](https://sharpscript.net/linq/grouping-operators#linq43-groupby---nested):
+
+```csharp
+List customers = GetCustomerList(); 
+
+var customerOrderGroups = 
+    from c in customers 
+    select 
+        new 
+        { 
+            c.CompanyName, 
+            YearGroups = 
+                from o in c.Orders 
+                group o by o.OrderDate.Year into yg 
+                select 
+                    new 
+                    { 
+                        Year = yg.Key, 
+                        MonthGroups = 
+                            from o in yg 
+                            group o by o.OrderDate.Month into mg 
+                            select new { Month = mg.Key, Orders = mg } 
+                    } 
+        }; 
+```
 
 ### JavaScript Array Support
 
@@ -3666,7 +3690,7 @@ its OAuth keys, you can add a modified copy in its App folder which will take pr
 
 ### Hosted Gist Apps
 
-All our Gist Apps are hosted in this way, where they're running a locally downloaded Gist App and hosted at the following URLs:
+All our Gist Apps are now hosted this way, by running a locally downloaded Gist App that's hosted at the following URLs:
 
  - [redis.web-app.io](http://redis.web-app.io)
  - [blog.web-app.io](http://blog.web-app.io)
@@ -3742,7 +3766,7 @@ var sseClient = new ServerEventsClient(baseUrl) {
 ### Return Refresh Tokens in Token Cookies
 
 The new `UseTokenCookie` added to C# and TypeScript Service Clients configures the Service Client to request
-Refresh Tokens be returned as a **JWT Token Cookie**:
+Refresh Tokens be returned in a **JWT Token Cookie**:
 
 ```csharp
 var client = new JsonServiceClient(BaseUrl);
