--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -4,26 +4,32 @@ slug: v5-6
 ---
 
 Many features in this release are focused on providing a more enjoyable, integrated and refined development experience for creating ServiceStack Apps.
-Starting with `ModularStartup` to enable a "no-touch", layerable composition of ASP.NET Core Apps, the `mix` dotnet tools for being able
-to add hand-picked features with a single command from its extensible library of composable features. Unified Navigation allows features to
-provide even deeper integration into your Apps and its native navigation renderers makes it effortless to maintain your Apps dynamic navigation menus
-across ServiceStack's most popular App types.
+Starting with [Modular Startup](#modular-startup) to enable a "no-touch", layerable composition of ASP.NET Core Apps, the 
+[`mix` dotnet tools](#mix-enabled-dotnet-tools) for being able to add hand-picked features with a single command from its 
+[extensible library ](#mix-usage) of composable features. 
+[Unified Navigation](#unified-navigation) allows features to provide even deeper integration into your Apps and its 
+[native navigation renderers](#navigation-renderers) makes it effortless to maintain your Apps dynamic navigation menus across ServiceStack's 
+most popular App types.
 
-High-level Server controls available to Sharp and Razor Pages Web Apps as well as rich client Component Libraries for Vue, React and Angular Apps
-provide an integrated experience for User Input Validation and App Routing and Navigation. 
+High-level [UI Controls](ui-component-list) available to [Sharp and Razor Pages](#script-pages) Web Apps as well as rich client Component Libraries 
+for [Vue, React and Angular Apps](6#navigation-components)
+provide an integrated experience for [User Input Validation](#bootstrap-ui-form-controls) and App [Routing and Navigation](#navigation-components). 
 
-The new SVG support takes care of maintaining libraries of SVG image-sets to produce optimal .css bundles and a variety of different ways to
-easily make usage of SVG images into your App without any reliance on external or build tooling.
+The new [SVG support](#svg) takes care of maintaining libraries of SVG image-sets to produce optimal .css bundles and a variety of different ways to
+easily [make usage of SVG images](#viewing-svg-icons) into your App without any reliance on external or build tooling.
 
 The easiest way to take advantage of these features is to create a new [ASP.NET Core Project Template](https://docs.servicestack.net/web-new)
 which have them pre-configured along with integrated Auth including auth-redirect flow of protected Service APIs and Pages.
 
-[#Script](https://sharpscript.net) has gained a number of exciting features, graduating it to where it's now our preferred way to create cross-platform 
-shell scripts that's now an enjoyable productive experience with the real-time feedback of watched scripts. However its most exciting new
-capability is being able to **Run Desktop Apps from Gists!** Resolving many of the disadvantages of Desktop Apps along the way, which are 
-Always Up-to-date, requires no install, can be run from URL of a Gist, GitHub Repo or Release Archive or when needed, offline, using the last ran version.
-The same Sharp App can also be run cross-platform on Windows, macOS and Linux and hosted on a Server that can be deployed and updated 
-in the easiest process imaginable thanks to its built-in support for publishing and installation.
+`#Script` has gained a [number of exciting features](#script), graduating it to where it's now our preferred way to create cross-platform 
+shell scripts that's now an enjoyable productive experience with the [real-time feedback of watched scripts](#live-shell-scripting-preview). 
+However its most exciting new capability is being able to **[Run Desktop Apps from Gists!](#gist-desktop-apps)** Resolving many of the 
+[disadvantages of Desktop Apps](#windows-net-core-desktop-apps) along the way, which are 
+[Always Up-to-date](#always-up-to-date), requires no install, can be [run from URL of a Gist](#run-apps-from-urls), GitHub Repo or Release Archive 
+or when needed, [offline](#run-apps-offline), using the last run version.
+The same Sharp App can also be [run cross-platform](#cross-platform) on Windows, macOS and Linux and hosted on a Server that can be 
+[deployed and updated](#deploy-updates) in the [easiest process imaginable](#gist-or-github-app-server-deployments) thanks to its built-in support for 
+[publishing](#publishing-gist-apps) and [installation](#instant-run-without-installation).
 
 We hope you love these new features and can't wait to see what new creations you build using them :)
 
@@ -102,8 +108,9 @@ We hope you love these new features and can't wait to see what new creations you
   - [Gist VFS Provider](#gist-vfs-provider)
     - [New Virtual File System APIs](#new-virtual-file-system-apis)
   - [GitHubGateway](#githubgateway)
-  - [Live Gist and GitHub Apps](#live-gist-and-github-apps)
+  - [Gist Desktop Apps](#gist-desktop-apps)
     - [Windows .NET Core Desktop Apps](#windows-net-core-desktop-apps)
+    - [Instant Run without Installation](#instant-run-without-installation)
     - [Cross Platform](#cross-platform)
     - [Always Up-to-date](#always-up-to-date)
     - [Run Apps Offline](#run-apps-offline)
@@ -3124,7 +3131,7 @@ public interface IGitHubGateway : IGistGateway
 The `GetJson` and `*JsonCollection` APIs can be used to query other [GitHub HTTP APIs](https://developer.github.com/v3/) not included 
 where they'll utilize the same configured HTTP Client and is able to stream GitHub's linked multi-paged HTTP Results.
 
-## Live Gist and GitHub Apps
+## Gist Desktop Apps
 
 We're extremely excited to bring ServiceStack's enhancements in this release to [Sharp Apps](https://sharpscript.net/docs/sharp-apps) 
 giving it additional liveness capabilities unseen in .NET Core Apps where they can now be **run on-the-fly without installation!**
@@ -3160,12 +3167,14 @@ Now everyone can launch a Windows Desktop Sharp App by specifying the name of th
 
     $ app open redis    
 
-This searches the [app.md](https://gist.github.com/gistlyn/802daba52b6fe6e2ed1430348dc596cb) global App directory for the link to the 
-App, and in this case launches the Redis Sharp App within a Chromium Desktop shell:
-
 #### redis
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/app-redis.png)
+
+### Instant Run without Installation
+
+This searches the [app.md](https://gist.github.com/gistlyn/802daba52b6fe6e2ed1430348dc596cb) global App directory for the link to the 
+App, and in this case launches the Redis Sharp App within a Chromium Desktop shell as seen above.
 
 The list of available apps is also visible from the command-line with:
 
