--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -21,7 +21,7 @@ easily [make usage of SVG images](#viewing-svg-icons) into your App without any 
 The easiest way to take advantage of these features is to create a new [ASP.NET Core Project Template](https://docs.servicestack.net/web-new)
 which have them pre-configured along with integrated Auth including auth-redirect flow of protected Service APIs and Pages.
 
-`#Script` has gained a [number of exciting features](#script), graduating it to where it's now our preferred way to create cross-platform 
+`#Script` has gained a [number of exciting features](#script-features), graduating it to where it's now our preferred way to create cross-platform 
 shell scripts that's now an enjoyable productive experience with the [real-time feedback of watched scripts](#live-shell-scripting-preview). 
 However its most exciting new capability is being able to **[Run Desktop Apps from Gists!](#gist-desktop-apps)** Resolving many of the 
 [disadvantages of Desktop Apps](#windows-net-core-desktop-apps) along the way, which are 
@@ -92,7 +92,7 @@ We hope you love these new features and can't wait to see what new creations you
     - [Optimal Library Bundles](#optimal-library-bundles)
     - [New Auth #Script methods](#new-auth-script-methods)
     - [Razor base methods](#razor-base-methods)
-  - [#Script](#script)
+  - [#Script Features](#script-features)
     - [All Script Methods can be used as Extension Methods!](#all-script-methods-can-be-used-as-extension-methods)
     - [JavaScript Array Support](#javascript-array-support)
     - [VFS Script Methods Object API](#vfs-script-methods-object-api)
@@ -2293,7 +2293,7 @@ Which is defined in [/Views/Shared/RequiresRole.cshtml](https://github.com/NetCo
 }
 ```
 
-## `#Script`
+## `#Script` Features
 
 We're happy to be able to share some exciting features added to `#Script` that greatly improves the usability of the language.
 
