--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -100,6 +100,8 @@ We hope you love these new features and can't wait to see what new creations you
         - [Preprocessor Code Transformations](#preprocessor-code-transformations)
     - [Shell Scripts](#shell-scripts)
         - [Live Shell Scripting Preview](#live-shell-scripting-preview)
+        - [Explore HTTP APIs in real-time](#explore-http-apis-in-real-time)
+        - [Live Querying of Databases](#live-querying-of-databases)
         - [Utilize high-level ServiceStack Features](#utilize-high-level-servicestack-features)
     - [Other #Script Features](#other-script-features)
         - [ifErrorReturn](#iferrorreturn)
@@ -2788,6 +2790,26 @@ of a task we needed to automate to import and rename **48px** SVG images from [M
 
 Here we can see how we're able to progressively arrive at our solution without leaving the source code, with the **watched** script 
 automatically updated at each `Ctrl+S` save point where we're able to easily infer its behavior from its descriptive textual output.
+
+#### Explore HTTP APIs in real-time
+
+The real-time scriptability of `#Script` makes it ideal for a whole host of explanatory programming tasks that would otherwise be painful
+in the slow code/build/debug cycles of a compiled language like C#, like being able to cut, sort & slice HTTP APIs with ease:
+
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/mix/github-api.gif)](https://youtu.be/Yjx_9Tp91bQ)
+
+> YouTube: [youtu.be/Yjx_9Tp91bQ](https://youtu.be/Yjx_9Tp91bQ)
+
+#### Live Querying of Databases
+
+It also serves a great tool for data exploration, akin to a programmable SQL Studio environment with instant feedback:
+
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/mix/query-northwind.gif)](https://youtu.be/HCjxVJ8RyPc)
+
+> YouTube: [youtu.be/HCjxVJ8RyPc](https://youtu.be/HCjxVJ8RyPc)
+
+Where it benefits from maintaining reusable queries in simple, executable text files that you can organize along with your other 
+shell scripts that you can check into a versionable repo, that others can checkout and run from the command-line in Windows, macOS or Linux OS's.
 
 #### Utilize high-level ServiceStack Features
 
