--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -2808,8 +2808,9 @@ It also serves a great tool for data exploration, akin to a programmable SQL Stu
 
 > YouTube: [youtu.be/HCjxVJ8RyPc](https://youtu.be/HCjxVJ8RyPc)
 
-Where it benefits from maintaining reusable queries in simple, executable text files that you can organize along with your other 
-shell scripts that you can check into a versionable repo, that others can checkout and run from the command-line in Windows, macOS or Linux OS's.
+That benefits from being able to mainta reusable queries in simple, executable text files that can be organized along with other 
+shell scripts and treated like source code where it can be checked into a versionable repo, that anyone will be able to checkout and run 
+from the command-line in Windows, macOS or Linux OS's.
 
 #### Utilize high-level ServiceStack Features
 
