--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -1352,6 +1352,31 @@ To start with, the NavItems collections can be initialized from `appsettings.jso
 }
 ```
 
+Or if preferred you can create the navigation in code:
+
+```csharp
+View.NavItems.AddRange(new List<NavItem>
+{
+    new NavItem { Href = "/",         Label = "Home",    Exact = true },
+    new NavItem { Href = "/about",    Label = "About" },
+    new NavItem { Href = "/services", Label = "services" },
+    new NavItem
+    {
+        Href = "/contact", Label = "Contact",
+        Children = new List<NavItem>
+        {
+            new NavItem { Href = "/contact/me", Label = "Me" },
+            new NavItem { Href = "/contact/email", Label = "Email" },
+            new NavItem { Label = "-" },
+            new NavItem { Href = "/contact/phone", Label = "Phone" },
+        }
+    },
+    new NavItem { Href = "/login",    Label = "Sign In", Hide = "auth" },
+    new NavItem { Href = "/profile",  Label = "Profile", Show = "auth" },
+    new NavItem { Href = "/admin",    Label = "Admin",   Show = "role:Admin" },
+});
+```
+
 Which when used to render your main menu navigation in a Bootstrap Web App, looks something like:
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/nav/appsettings.png)
