Rename sharp to script, Sharp Pages to #Script Pages

--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -189,7 +189,7 @@ feel free to jump directly to the features you're interested in:
     - [Fluent Validation](#fluent-validation)
     - [Auto Batching](#auto-batching)
     - [Hot Reload](#hot-reload)
-        - [Hot Reload Sharp Pages](#hot-reload-sharp-pages)
+        - [Hot Reload #Script Pages](#hot-reload-sharp-pages)
         - [Hot Reload Static Files](#hot-reload-static-files)
     - [Image Utils](#image-utils)
     - [Enum Utils](#enum-utils)
@@ -1672,7 +1672,7 @@ This change doesn't affect any of your existing `#Script` source code whose exis
 #### New Terminology
 
 The primary rationale for the rebranding was so we're better able to label, describe and document all of `#Script` different features easier, 
-so when referring to Templates **View Engine** we're now calling **Sharp Pages** which is a better corollary to "Razor Pages" 
+so when referring to Templates **View Engine** we're now calling **#Script Pages** which is a better corollary to "Razor Pages" 
 which it provides an alternative to.
 
 Other re-branded features:
@@ -1846,7 +1846,7 @@ As of this writing there **4 different server HTML** generated strategies that u
 
 ### Server Rendered HTML UIs
 
- - [/server](https://github.com/NetCoreApps/Validation/tree/master/world/wwwroot/server) - Sharp Pages using Server Controls
+ - [/server](https://github.com/NetCoreApps/Validation/tree/master/world/wwwroot/server) - #Script Pages using Server Controls
  - [/server-ts](https://github.com/NetCoreApps/Validation/tree/master/world/wwwroot/server-ts) - Server HTML enhanced with TypeScript
  - [/server-jquery](https://github.com/NetCoreApps/Validation/tree/master/world/wwwroot/server-jquery) - Server HTML enhanced with jQuery
  - [/server-razor](https://github.com/NetCoreApps/Validation/tree/master/world/wwwroot/server-razor) - ServiceStack.Razor using Razor Helpers
@@ -1878,7 +1878,7 @@ All Services and Validators used in this App. Extension methods are used to DRY 
 
 {% include validation/services/gist94751658.html %}
 
-The dynamic App data used within ServiceStack Sharp Pages and Razor pages are maintained within Custom `ContactScripts` and `RazorHelpers`:
+The dynamic App data used within ServiceStack #Script Pages and Razor pages are maintained within Custom `ContactScripts` and `RazorHelpers`:
 
 {% include validation/services/gist94751797.html %}
 
@@ -1919,7 +1919,7 @@ All Server Examples submits a HTML Form Post and renders full page responses:
 <ul class="nav nav-pills mb-3" id="login-server" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="login-server-sharp-tab" data-toggle="pill" href="#login-server-sharp" role="tab" aria-controls="login-server-sharp" aria-selected="true">
-        Sharp Pages
+        #Script Pages
     </a>
   </li>
   <li class="nav-item">
@@ -1975,7 +1975,7 @@ All Server Examples submits a HTML Form Post and renders full page responses:
 ### About Server Implementations
 
 Unfortunately Validation in Bootstrap doesn't lend itself to easy server rendering as it requires co-ordination with label, input and error feedback 
-elements so **Sharp Pages** wraps this in a `formInput` control from `BootstrapScripts` to render both Label and Input elements together. 
+elements so **#Script Pages** wraps this in a `formInput` control from `BootstrapScripts` to render both Label and Input elements together. 
 For those preferring Razor, these same controls are available as `@Html` Helpers as seen in **Server Razor** which ends up having identical 
 behavior and markup, albeit rendered using a different View Engine.
 
@@ -2068,7 +2068,7 @@ or `password` fields.
 
 **Client jQuery** uses the exact same markup but uses `$('form').bootstrapForm()` jQuery plugin to handle the form Ajax request and any error binding.
 
-**Client Razor** adopts the same jQuery implementation but is rendered using MVC Razor instead of **Sharp Pages**.
+**Client Razor** adopts the same jQuery implementation but is rendered using MVC Razor instead of **#Script Pages**.
 
 ## Contacts Page
 
@@ -2086,7 +2086,7 @@ Here's an example of what a partially submitted invalid form looks like:
 <ul class="nav nav-pills mb-3" id="contacts-server" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="contacts-server-sharp-tab" data-toggle="pill" href="#contacts-server-sharp" role="tab" aria-controls="contacts-server-sharp" aria-selected="true">
-        Sharp Pages
+        #Script Pages
     </a>
   </li>
   <li class="nav-item">
@@ -2144,9 +2144,9 @@ Here's an example of what a partially submitted invalid form looks like:
 Both the Contacts UIs and Contacts Services are protected resources which uses a **partial** to protect its pages. 
 Normally `redirectIfNotAuthenticated` wouldn't require a URL, but one is needed here so it knows the right login page it should redirect to.
 
-#### Sharp Pages
+#### #Script Pages
 
-In **Sharp Pages** our wrist-friendly server controls are back as we start to see more of its features. The arguments of the left of the `formInput` 
+In **#Script Pages** our wrist-friendly server controls are back as we start to see more of its features. The arguments of the left of the `formInput` 
 are for HTML attributes you want rendered on the input control whilst the arguments on the right (or 2nd argument) are to enlist the controls 
 other "high-level features" like `values` which is used to populate a list of radio and checkboxes or `formSelect` options. The `inline` 
 argument tells the control to render multiple controls in-line whilst you can use `help` to render some help text as an aside.
@@ -2157,7 +2157,7 @@ We also see the introduction of the `sendToGateway` method used to send the `Get
 Another difference is that there are multiple `<form>` elements on this page to handle deleting a contact by submitting an empty form post to
 `/contacts/{{Id}}/delete`.
 
-**Sharp Pages** doesn't need to specify its own `ErrorView` or `Continue` Request params as its the default view used for `ContactServices`: 
+**#Script Pages** doesn't need to specify its own `ErrorView` or `Continue` Request params as its the default view used for `ContactServices`: 
 
 ```csharp
 [DefaultView("/server/contacts")] // Render custom HTML View for HTML Requests
@@ -2170,7 +2170,7 @@ This is typically all that's needed, as most real-world Apps would rarely have m
 
 With **Server TypeScript** you're starting to see the additional effort required when you need to use your own custom markup to render form controls. 
 
-It differs with **Sharp Pages** in that instead of rendering the list of contacts on the server, it renders the `GetContacts` Response DTO
+It differs with **#Script Pages** in that instead of rendering the list of contacts on the server, it renders the `GetContacts` Response DTO
 as JSON which is interpreted in the browser as a native JS Object literal which the `render()` method uses to render the list of contacts in the browser.
 
 Deleting a contact is also handled differently where it uses the `JsonServiceClient` to send the `DeleteContact` Request DTO from the generated `dtos.ts`.
@@ -2183,7 +2183,7 @@ with jQuery's Ajax APIs to call the `ContactServices`.
 
 #### Server Razor
 
-**Server Razor** is very similar to **Sharp Pages** but implemented using Razor. In many cases the built-in script methods in Sharp Pages have
+**Server Razor** is very similar to **#Script Pages** but implemented using Razor. In many cases the built-in script methods in #Script Pages have
 Razor equivalents, either in the base `ViewPage<T>` class like `RedirectIfNotAuthenticated()` or as a `@Html` helper.
 
 ### Client UIs
@@ -2504,7 +2504,7 @@ for automated tooling and machinery as they can be predicted without requiring a
 #### Optimize Custom Routes for humans
 
 Use [Custom Routes](/routing#custom-routes) to also make your **Services** available at the optimal Clean URLs for humans. For **Content Pages** 
-you can take advantage of **Page Based Routing** in both **Sharp Pages** and now in **Razor** to specify the ideal route for your page which 
+you can take advantage of **Page Based Routing** in both **#Script Pages** and now in **Razor** to specify the ideal route for your page which 
 in addition to requiring less effort to define (as they're implicitly defined) they're also less effort to implement as **no Controller or Service**
 are needed. They also benefit from being immediately inferrible by looking at the intuitively mapped directory and file names alone which works 
 equally well in reverse where the page for a route will be exactly where you think it will be.
@@ -2727,7 +2727,7 @@ These are the only sources `web new` looks at to create ServiceStack projects, w
   13. react-spa          .NET Core 2.1 React Create App CLI Bootstrap App
   14. rockwind-webapp    .NET Core 2.1 Rockwind Sharp Apps
   15. selfhost           .NET Core 2.1 self-hosting Console App
-  16. sharp              .NET Core 2.1 Sharp Pages Bootstrap Website
+  16. script             .NET Core 2.1 #Script Pages Bootstrap Website
   17. vue-lite           .NET Core 2.1 simple + lite (npm-free) Vue SPA using TypeScript inc bundling + hot reloading
   18. vue-nuxt           .NET Core 2.1 Nuxt.js SPA App with Bootstrap
   19. vue-spa            .NET Core 2.1 Vue CLI Bootstrap App
@@ -2745,7 +2745,7 @@ These are the only sources `web new` looks at to create ServiceStack projects, w
    6. react-desktop-apps-netfx  .NET Framework React Desktop Apps
    7. react-spa-netfx           .NET Framework React Bootstrap Webpack App
    8. selfhost-netfx            .NET Framework self-hosting HttpListener Console App
-   9. sharp-netfx               .NET Framework Templates Bootstrap WebApp
+   9. script-netfx              .NET Framework #Script Pages Bootstrap WebApp
   10. vue-nuxt-netfx            .NET Framework Vue Nuxt.js SPA Web App
   11. vue-spa-netfx             .NET Framework Vue Bootstrap Webpack App
   12. vuetify-nuxt-netfx        .NET Framework Vuetify Material Nuxt.js SPA Web App
@@ -2759,7 +2759,7 @@ ASP.NET Core Framework Templates:
    2. razor-corefx       .NET Framework ASP.NET Core Website with ServiceStack.Razor
    3. react-lite-corefx  .NET Framework ASP.NET Core lite (npm-free) React SPA using TypeScript inc bundling + hot reloading
    4. selfhost-corefx    .NET Framework ASP.NET Core self-hosting Console App
-   5. sharp-corefx       .NET Framework ASP.NET Core Templates Bootstrap Website
+   5. script-corefx       .NET Framework ASP.NET Core #Script Pages Bootstrap Website
    6. vue-lite-corefx    .NET Framework ASP.NET Core lite (npm-free) Vue SPA using TypeScript inc bundling + hot reloading
    7. web-corefx         .NET Framework ASP.NET Core Website
 ```
@@ -2802,7 +2802,7 @@ Which as of this writing lists:
    2. init-lts             Empty .NET Core 2.1 LTS ServiceStack App                               to: .                            by @ServiceStack  [project]
    3. init-corefx          Empty ASP.NET Core 2.1 LTS on .NET Framework                           to: .                            by @ServiceStack  [project]
    4. init-sharp-app       Empty ServiceStack Sharp App                                           to: .                            by @ServiceStack  [project]
-   5. bootstrap-sharp      Bootstrap + Sharp Pages Starter Template                               to: $HOST                        by @ServiceStack  [ui,sharp]
+   5. bootstrap-sharp      Bootstrap + #Script Pages Starter Template                             to: $HOST                        by @ServiceStack  [ui,sharp]
    6. sqlserver            Use OrmLite with SQL Server                                            to: $HOST                        by @ServiceStack  [db]
    7. sqlite               Use OrmLite with SQLite                                                to: $HOST                        by @ServiceStack  [db]
    8. postgres             Use OrmLite with PostgreSQL                                            to: $HOST                        by @ServiceStack  [db]
@@ -2855,7 +2855,7 @@ Results matching tag [project]:
 Search:  web + #<tag> Available tags: auth, config, db, example, lib, project, react, sharp, ui, vue
 ```
 
-Which can be chained together to search for all `project` and `sharp` gists we can use for [Sharp Pages](https://sharpscript.net/docs/sharp-pages) projects:
+Which can be chained together to search for all `project` and `sharp` gists we can use for [#Script Pages](https://sharpscript.net/docs/sharp-pages) projects:
 
     $ web + #project,sharp
 
@@ -2866,7 +2866,7 @@ Results matching tags [project,sharp]:
    2. init-lts             Empty .NET Core 2.1 LTS ServiceStack App      to: .      by @ServiceStack  [project]
    3. init-corefx          Empty ASP.NET Core 2.1 LTS on .NET Framework  to: .      by @ServiceStack  [project]
    4. init-sharp-app       Empty ServiceStack Sharp App                  to: .      by @ServiceStack  [project]
-   5. bootstrap-sharp      Bootstrap + Sharp Pages Starter Template      to: $HOST  by @ServiceStack  [ui,sharp]
+   5. bootstrap-sharp      Bootstrap + #Script Pages Starter Template      to: $HOST  by @ServiceStack  [ui,sharp]
    6. validation-contacts  Contacts Validation Example                   to: $HOST  by @ServiceStack  [example,sharp]
 
  Usage:  web +<name>
@@ -2909,15 +2909,15 @@ After we've created our empty .NET Core project we can configure it to use **Pos
 
     $ web +postgres
 
-Or we can give it a **Bootstrap Sharp Pages UI** with:
+Or we can give it a **Bootstrap #Script Pages UI** with:
 
     $ web +bootstrap-sharp
 
-What's even better is that gists can be chained, so we can create a **.NET Core 2.2 Bootstrap Sharp Pages App using PostgreSQL** with:
+What's even better is that gists can be chained, so we can create a **.NET Core 2.2 Bootstrap #Script Pages App using PostgreSQL** with:
 
     $ web +init+bootstrap-sharp+postgres
 
-A **Bootstrap Sharp Pages App** that includes a complete **Contacts Validation example** with:
+A **Bootstrap #Script Pages App** that includes a complete **Contacts Validation example** with:
 
     $ web +init+bootstrap-sharp+validation-contacts
 
@@ -2933,7 +2933,7 @@ This isn't just limited to gist projects, you can also apply gists when **creati
 
     $ web new sharp+postgres+auth-db
 
-Which will create a [sharp](https://github.com/NetCoreTemplates/sharp) project configured to use **PostgreSQL Auth**.
+Which will create a [script](https://github.com/NetCoreTemplates/script) project configured to use **PostgreSQL Auth**.
 
 This works despite the `sharp` project being a [multi-project solution](/physical-project-structure) 
 thanks to the `to: $HOST` modifier which says to **apply the gists files** to the `HOST` project.
@@ -4049,9 +4049,9 @@ Thanks to [@georgehemmings](https://github.com/georgehemmings) for this feature.
 
 ServiceStack includes 2 Hot Reloading solutions to automatically detect file changes and reload your page on save.
 
-#### Hot Reload Sharp Pages
+#### Hot Reload #Script Pages
 
-The [Hot Reloading](https://sharpscript.net/docs/hot-reloading) support in Sharp Pages enables the `HotReloadFilesService`
+The [Hot Reloading](https://sharpscript.net/docs/hot-reloading) support in #Script Pages enables the `HotReloadFilesService`
 when registering the `SharpPagesFeature`, e.g:
 
 ```csharp
@@ -4067,7 +4067,7 @@ This is enabled in your pages with this snippet which renders the hot reload cli
 ```
 
 Which starts a long poll that calls the smart `HotReloadFilesService` which recursively inspects the current tokenized 
-[Sharp Pages](https://sharpscript.net/docs/sharp-pages) to find if it or any dependent layouts, partials or file includes have changed.
+[#Script Pages](https://sharpscript.net/docs/sharp-pages) to find if it or any dependent layouts, partials or file includes have changed.
 
 Sharp Page's Hot Reload feature now also monitors **Paged Based Routing Pages** and **View Pages**.
 
