--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -653,7 +653,7 @@ The Webpack templates have been updated to utilize [Webpack's DllPlugin](https:/
  
     $ npm run dev
 
-Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to [Sharp Pages hot-reloading](https://sharpscript.net/docs/hot-reloading) where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port http://localhost:3000 
+Which will watch and re-compile your App for any changes. These new templates also include a new hot-reload feature which works similar to [#Script Pages hot-reloading](https://sharpscript.net/docs/hot-reloading) where in **DebugMode** it will long poll the server to watch for any modified files in `/wwwroot` and automatically refresh the page. This provides a hot-reload alternative to `npm run dev-server` to run a Webpack Dev Server proxy on port http://localhost:3000 
 
 ### Configured with `#Script`
  
@@ -759,19 +759,19 @@ Both `razor` and `templates` project enjoy Hot Reloading where in development a 
     </td>
 </tr>
 <tr>
-    <td><a href="https://github.com/NetCoreTemplates/sharp">templates</a></td>
-    <td><a href="https://github.com/NetFrameworkTemplates/sharp-netfx">sharp-netfx</a></td>
+    <td><a href="https://github.com/NetCoreTemplates/script">script</a></td>
+    <td><a href="https://github.com/NetFrameworkTemplates/script-netfx">script-netfx</a></td>
     <td align="center">
-        <h3>Sharp Pages Bootstrap Template</h3>
-        <a href="http://sharp.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/sharp.png" width="500" /></a>
-        <p><a href="http://sharp.web-templates.io">sharp.web-templates.io</a></p>
+        <h3>#Script Pages Bootstrap Template</h3>
+        <a href="http://script.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/script.png" width="500" /></a>
+        <p><a href="http://script.web-templates.io">script.web-templates.io</a></p>
     </td>
 </tr>
 </table>
 
 ### Empty Web and SelfHost Templates
 
-Those who prefer starting from an Empty slate can use the `web` template to create the minimal configuration for a Web Application whilst the `selfhost` template can be used to develop Self-Hosting Console Apps. Both templates still follow our recommended physical project layout but are configured with the minimum number of dependencies, e.g. the `selfhost` Console App just has a dependency on [Microsoft.AspNetCore.Server.Kestrel and ServiceStack](https://github.com/NetCoreTemplates/selfhost/blob/f11b25e80752d1fee96ac904a8df07fb150ee746/MyApp/MyApp.csproj#L11-L12), in contrast most templates have a dependency on the all-encompasing `Microsoft.AspNetCore.All` meta package.
+Those who prefer starting from an Empty slate can use the `web` template to create the minimal configuration for a Web Application whilst the `selfhost` template can be used to develop Self-Hosting Console Apps. Both templates still follow our recommended physical project layout but are configured with the minimum number of dependencies, e.g. the `selfhost` Console App just has a dependency on [Microsoft.AspNetCore.Server.Kestrel and ServiceStack](https://github.com/NetCoreTemplates/selfhost/blob/f11b25e80752d1fee96ac904a8df07fb150ee746/MyApp/MyApp.csproj#L11-L12), in contrast most templates have a dependency on the all-encompassing `Microsoft.AspNetCore.All` meta package.
 
 <table class="table">
 <tr>
@@ -1219,9 +1219,9 @@ Which you could use to provide a tailored feed for specific clients:
 public class CustomFeedView { ... }
 ```
 
-### Sharp Pages
+### #Script Pages
 
-[Sharp Pages](https://sharpscript.net/docs/sharp-pages) gains support for the last missing feature from ServiceStack.Razor with its new **View Pages** support which lets you use `.html` Template Pages to render the HTML for Services Responses. 
+[#Script Pages](https://sharpscript.net/docs/sharp-pages) gains support for the last missing feature from ServiceStack.Razor with its new **View Pages** support which lets you use `.html` Template Pages to render the HTML for Services Responses. 
 
 It works similarly to Razor ViewPages where it uses first matching View Page with the Response DTO is injected as the `Model` property. The View Pages can be in any folder within the `/Views` folder using the format `{PageName}.html` where `PageName` can be either the **Request DTO** or **Response DTO** Name, but all page names within the `/Views` folder need to be unique.
 
@@ -1363,9 +1363,9 @@ The MVC HTML Helpers for ASP.NET ServiceStack.Razor has been moved to the **Serv
 
 [Markdown Razor](/markdown-razor) and its `MarkdownFormat` was also moved to ServiceStack.Razor as they were built on older Code DOM technology which isn't available on .NET Core and saw its feature-set stripped down to bare Markdown functionality.
 
-#### Sharp Pages
+#### #Script Pages
 
-If you were using Markdown Razor we recommend using the superior, cleaner, faster and more flexible alternative in [Sharp Pages](https://sharpscript.net/docs/sharp-pages) which easily supports Markdown Razor's most redeeming feature of being able to mix .NET in Markdown by utilizing its [Transformers](https://sharpscript.net/docs/transformers) feature.
+If you were using Markdown Razor we recommend using the superior, cleaner, faster and more flexible alternative in [#Script Pages](https://sharpscript.net/docs/sharp-pages) which easily supports Markdown Razor's most redeeming feature of being able to mix .NET in Markdown by utilizing its [Transformers](https://sharpscript.net/docs/transformers) feature.
 
 #### Markdown Config
 
