--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -188,7 +188,7 @@ Most ServiceStack features are encapsulated within [Plugins](/plugins) which are
 adding a declarative class instance to the `Plugins` collection. Plugins encapsulate the entire feature, taking care of all IOC 
 registrations and how to configure itself with ServiceStack.
 
-So if you wanted to enable [Sharp Pages](https://sharpscript.net/docs/sharp-pages) (alternative to MVC) and give all pages
+So if you wanted to enable [#Script Pages](https://sharpscript.net/docs/sharp-pages) (alternative to MVC) and give all pages
 access to OrmLite's DB functionality - it can all be configured with a single declarative expression:
 
 ```csharp
@@ -200,7 +200,7 @@ Plugins.Add(new SharpPagesFeature {
 ```
 
 Other features independent of your AppHost are able to easily extend other plugins before they're registered,
-e.g. the new AuthRepo UI Feature ensures Sharp Pages is registered and extends it with its own functionality with:
+e.g. the new AuthRepo UI Feature ensures #Script Pages is registered and extends it with its own functionality with:
 
 ```csharp
 public void Configure(IAppHost appHost)
@@ -517,7 +517,7 @@ Where it displays different features that can be added to your App, where they'r
  2. init-lts             Empty .NET Core 2.1 LTS ServiceStack App     to: .      by @ServiceStack  [project]
  3. init-corefx          Empty ASP.NET Core 2.1 LTS on .NET Framework to: .      by @ServiceStack  [project]
  4. init-sharp-app       Empty ServiceStack Sharp App                 to: .      by @ServiceStack  [project]
- 5. bootstrap-sharp      Bootstrap + Sharp Pages Starter Template     to: $HOST  by @ServiceStack  [ui,sharp]
+ 5. bootstrap-sharp      Bootstrap + #Script Pages Starter Template   to: $HOST  by @ServiceStack  [ui,sharp]
  6. redis                Use ServiceStack.Redis                       to: $HOST  by @ServiceStack  [db]
  7. sqlserver            Use OrmLite with SQL Server                  to: $HOST  by @ServiceStack  [db]
  8. sqlite               Use OrmLite with SQLite                      to: $HOST  by @ServiceStack  [db]
@@ -685,7 +685,7 @@ namespace MyApp
 ```
 
 The configuration is declarative where it only runs `Configure(IAppHost appHost)` in ServiceStack Apps and only adds the `RedisScripts`
-if it's configured with [Sharp Pages](https://sharpscript.net/docs/sharp-pages), otherwise any additional configuration is inert and isn't run.
+if it's configured with [#Script Pages](https://sharpscript.net/docs/sharp-pages), otherwise any additional configuration is inert and isn't run.
 
 Typically DB's will require you to specify your App DB's connection string to your external DB (with a default fallback) - where typically the
 most effort required to enable a feature is adding a Connection String in your `appsettings.json`.
@@ -1462,7 +1462,7 @@ it includes additional "wrapper" HTML tags around each component.
 
 ### `#Script` Pages
 
-In [Sharp Pages](https://sharpscript.net/docs/sharp-pages) you can use render the `navbar` and `navButtonGroup` methods to render NavItems:
+In [#Script Pages](https://sharpscript.net/docs/sharp-pages) you can use render the `navbar` and `navButtonGroup` methods to render NavItems:
 
 #### Navbar
 
@@ -2066,7 +2066,7 @@ Or inside a CSS class:
 
 ### Server Controls
 
-Use these `#Script` methods to reference and modify individual SVG images in [Sharp Pages](https://sharpscript.net/docs/sharp-pages):
+Use these `#Script` methods to reference and modify individual SVG images in [#Script Pages](https://sharpscript.net/docs/sharp-pages):
 
 ```csharp
 svgImage(string name) => Svg.GetImage(name)
@@ -2557,7 +2557,7 @@ Most JS Array methods are supported, including the latest additions from ES2019:
 
 This now makes it possible to provide a more natural OOP API over object instances using just script methods, e.g. 
 all [Protected Scripts Virtual File System APIs](https://sharpscript.net/docs/protected-scripts#virtual-file-system-apis)
-are executed against the `ScriptContext.VirtualFiles` which in Sharp Pages is configured to the **WebRoot** FileSystem by default:
+are executed against the `ScriptContext.VirtualFiles` which in #Script Pages is configured to the **WebRoot** FileSystem by default:
 
 ```js
 allFiles()
