--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -1352,6 +1352,8 @@ To start with, the NavItems collections can be initialized from `appsettings.jso
 }
 ```
 
+### Populate from Code
+
 Or if preferred you can create the navigation in code:
 
 ```csharp
