--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -894,12 +894,12 @@ Authentication integration allowing each authenticated user to manage their own 
 
 To follow video's example, start with a new **Acme** project from `sharp` .NET Core Template:
 
-    $ mix new sharp Acme
+    $ web new sharp Acme
 
 Add the `example-validation` mix:
 
     $ cd Acme
-    $ mix example-validation
+    $ web mix example-validation
 
 Which will prompt you with a link to the gist and the files that will be added to your project:
 
