--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -894,7 +894,7 @@ Authentication integration allowing each authenticated user to manage their own 
 
 To follow video's example, start with a new **Acme** project from `sharp` .NET Core Template:
 
-    $ web new sharp Acme
+    $ web new script Acme
 
 Add the `example-validation` mix:
 
