--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -89,6 +89,7 @@ We hope you love these new features and can't wait to see what new creations you
     - [Mix in SVG Images](#mix-in-svg-images)
   - [Embedded Bootstrap CSS](#embedded-bootstrap-css)
   - [Refined Project Templates](#refined-project-templates)
+    - [Auth Enabled Project Templates](#auth-enabled-project-templates)
     - [Optimal Library Bundles](#optimal-library-bundles)
     - [New Auth #Script methods](#new-auth-script-methods)
     - [Razor base methods](#razor-base-methods)
@@ -2164,6 +2165,110 @@ of the ServiceStack Features added in this release, namely:
  - **Optimal Library Bundles** - CSS/JS bundles are split into optimal hashed library and frequently changing App bundles
  - **SSL** - As it's recommended for Web Apps to use SSL, all templates now use `https://localhost:5001` and 
  configured to use Same Site Cookies by default
+
+### Auth Enabled Project Templates
+
+Most Project Templates are now integrated with Credentials Auth and Facebook, Google and Facebook 3rd Party OAuth providers, complete with
+protected Pages and Services and auth redirect flow to Sign In and Forbidden pages. 
+
+#### angular-spa
+
+> Angular 8 CLI Bootstrap App
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/angular-spa.png)
+
+    $ web new angular-spa ProjectName            # .NET Core
+    $ web new angular-spa-netfx ProjectName      # Classic ASP.NET on .NET Framework
+
+#### mvcauth
+
+> .NET Core 2.2 MVC Website integrated with ServiceStack Auth
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/mvcauth.png)
+
+    $ web new mvcauth ProjectName                # .NET Core
+
+#### mvcidentity
+
+> .NET Core 2.2 MVC Website integrated with ServiceStack using MVC Identity Auth
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/mvcidentity.png)
+
+    $ web new mvcidentity ProjectName            # .NET Core
+
+#### mvcidentityserver
+
+> .NET Core 2.1 MVC Website integrated with ServiceStack using IdentityServer4 Auth
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/mvcidentityserver.png)
+
+    $ web new mvcidentityserver ProjectName      # .NET Core
+
+#### razor
+
+> ServiceStack.Razor Bootstrap Website
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/razor.png)
+
+    $ web new razor ProjectName                  # .NET Core
+    $ web new razor-corefx ProjectName           # ASP.NET Core on .NET Framework
+    $ web new razor-netfx ProjectName            # Classic ASP.NET on .NET Framework
+
+#### react-spa
+
+> React Create App CLI Bootstrap App
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/react-spa.png)
+
+    $ web new react-spa ProjectName              # .NET Core
+    $ web new react-spa-netfx ProjectName        # Classic ASP.NET on .NET Framework
+
+#### react-lite
+
+> ASP.NET Core Simple + lite (npm-free) React SPA using TypeScript
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/react-lite.png)
+
+    $ web new react-lite ProjectName             # .NET Core
+    $ web new react-lite-corefx ProjectName      # ASP.NET Core on .NET Framework
+
+#### script
+
+> #Script Pages Bootstrap Website
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/script.png)
+
+    $ web new script ProjectName                 # .NET Core
+    $ web new script-corefx ProjectName          # ASP.NET Core on .NET Framework
+    $ web new script-netfx ProjectName           # Classic ASP.NET on .NET Framework
+
+#### vue-spa
+
+> Vue CLI Bootstrap App
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/vue-spa.png)
+
+    $ web new vue-spa ProjectName                # .NET Core
+    $ web new vue-spa-netfx ProjectName          # Classic ASP.NET on .NET Framework
+
+#### vue-lite
+
+> ASP.NET Core Simple + lite (npm-free) Vue SPA using TypeScript
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/vue-lite.png)
+
+    $ web new vue-lite ProjectName               # .NET Core
+    $ web new vue-lite-corefx ProjectName        # ASP.NET Core on .NET Framework
+
+#### vue-nuxt
+
+> Nuxt.js SPA App with Bootstrap
+
+![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/vue-nuxt.png)
+
+    $ web new vue-nuxt ProjectName               # .NET Core
+    $ web new vue-nuxt-netfx ProjectName         # Classic ASP.NET on .NET Framework
+
 
 ### Optimal Library Bundles
 
