--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -3891,7 +3891,7 @@ The internalized version of `ServiceStack.FluentValidation` was upgraded to Flue
  - New `GetUserAuths()` and `SearchUserAuths()` API's on `IAuthRepository` lets you search and page through registered users
  - New `IManageRoles.GetRolesAndPermissions()` API allows for more efficient API to fetch both roles & permissions in single API call 
   in `IManageRoles` Auth Repositories that are configured with `UseDistinctRoleTables`
- - `MongoDbAuthRepository` upgraded to latest **v2.8.1**
+ - `MongoDbAuthRepository` upgraded to latest **v2.8.1** and now includes supports for .NET Core
  - `RavenDbUserAuthRepository` upgraded to use **v4.2** and now includes supports for .NET Core
 
 #### RavenDB Breaking Change
