--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -627,6 +627,15 @@ This feature also installs the **MongoDB.Driver** NuGet package as instructed by
 
 So after just a single `mix` command and App restart, it's now configured and running with MongoDB!
 
+#### Registering MongoDB Auth Repository
+
+As a design goal `mix` features are designed to be layerable where you can existing features that builds upon existing registrations, 
+for example you can later configure your App to **enable auth** and configure it to use a `MongoDbAuthRepository` with:
+
+    $ mix auth auth-mongodb
+
+> This release also includes .NET Core Support for `MongoDbAuthRepository` and has been upgraded to use the latest **MongoDB.Driver v2.8.1**
+
 ### Mix in DB Support
 
 All DB servers are just as easily configurable, which we can quickly find using a `[db]` tag search:
