--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -3331,6 +3331,10 @@ Now everyone can launch a Windows Desktop Sharp App by specifying the name of th
 
     $ app open redis    
 
+<iframe width="896" height="525" src="https://www.youtube.com/embed/FlKeaav0gt8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+> OSX or Linux users can run Sharp Apps with the cross-platform [web](https://docs.servicestack.net/web-tool) dotnet tool instead
+
 #### redis
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/app-redis.png)
